# scruffy

./: configure.in  scruffy-1.0.pc.in
scruffy/: Makefile.am  checkpoint_tracker.cpp  checkpoint_tracker.h  cpp.cpp  cpp.h  cpp_dispatcher.h  cpp_parser.cpp  cpp_parser.h  cpp_util.cpp  cpp_util.h  cpp_visitor.h  dump_context.cpp  dump_context.h  list_pp_item_stream.cpp  list_pp_item_stream.h  list_token_stream.h  macro_definition.h  name_tracker.h  parsing_exception.h  phase3_item_stream.cpp  phase3_item_stream.h  pp_item_stream.cpp  pp_item_stream.h  pp_item_stream_token_stream.cpp  pp_item_stream_token_stream.h  preprocessor.cpp  preprocessor.h  preprocessor_types.h  preprocessor_util.cpp  preprocessor_util.h  test_dispatcher.h  type.h  unichar_pp_item_stream.cpp  unichar_pp_item_stream.h  util.cpp  util.h
